--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -20,6 +20,9 @@ layout: default
       sidebar-container">
       <!-- Featured Tags -->
       {% include featured-tags.html %}
+
+      <!-- Friends Blog -->
+      {% include friends.html %}
     </div>
     {% else %}
 
@@ -37,6 +40,9 @@ layout: default
 
       <!-- Short About -->
       {% include short-about.html %}
+
+      <!-- Friends Blog -->
+      {% include friends.html %}
     </div>
     {% endif %}
   </div>
