--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -88,6 +88,9 @@ layout: default
 
                 <!-- Featured Tags -->
                 {% include featured-tags.html bottom=true %}
+
+                <!-- Friends Blog -->
+                {% include friends.html %}
             </div>
         </div>
     </div>
