--- a/_includes/sns-links.html
+++ b/_includes/sns-links.html
@@ -28,6 +28,16 @@
     </a>
   </li>
   {% endif %}
+  {% if site.github_username %}
+  <li>
+    <a target="_blank" href="https://github.com/{{ site.github_username }}">
+      <span class="fa-stack fa-lg">
+        <i class="fa fa-circle fa-stack-2x"></i>
+        <i class="fa fa-github fa-stack-1x fa-inverse"></i>
+      </span>
+    </a>
+  </li>
+  {% endif %}
   {% if site.zhihu_username %}
   <li>
     <a target="_blank" href="https://www.zhihu.com/people/{{ site.zhihu_username }}">
@@ -48,22 +58,22 @@
     </a>
   </li>
   {% endif %}
+  {% if site.bilibili_uid %}
+  <li>
+    <a target="_blank" href="https://space.bilibili.com/{{ site.bilibili_uid }}">
+      <span class="fa-stack fa-lg">
+        <i class="fa fa-circle fa-stack-2x"></i>
+        <i class="fa fa-camera-retro fa-stack-1x fa-inverse"></i>
+      </span>
+    </a>
+  </li>
+  {% endif %}
   {% if site.facebook_username %}
   <li>
     <a target="_blank" href="https://www.facebook.com/{{ site.facebook_username }}">
       <span class="fa-stack fa-lg">
         <i class="fa fa-circle fa-stack-2x"></i>
         <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
-      </span>
-    </a>
-  </li>
-  {% endif %}
-  {% if site.github_username %}
-  <li>
-    <a target="_blank" href="https://github.com/{{ site.github_username }}">
-      <span class="fa-stack fa-lg">
-        <i class="fa fa-circle fa-stack-2x"></i>
-        <i class="fa fa-github fa-stack-1x fa-inverse"></i>
       </span>
     </a>
   </li>
